@@ -1,37 +1,34 @@
-import com.lehaine.littlekt.gradle.texturepacker.littleKt
-import com.lehaine.littlekt.gradle.texturepacker.packing
-import com.lehaine.littlekt.gradle.texturepacker.texturePacker
-import org.jetbrains.kotlin.gradle.plugin.KotlinJsCompilerType
+import com.littlekt.gradle.texturepacker.littleKt
+import com.littlekt.gradle.texturepacker.packing
+import com.littlekt.gradle.texturepacker.texturePacker
+import org.apache.tools.ant.taskdefs.condition.Os
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
 
 buildscript {
     val littleKtVersion: String by project
-    val androidPluginVersion: String by project
     repositories {
-        google()
         mavenLocal()
+        google()
         mavenCentral()
         maven(url ="https://s01.oss.sonatype.org/content/repositories/snapshots/")
     }
     dependencies {
-        classpath("com.lehaine.littlekt.gradle:texturepacker:$littleKtVersion")
-        classpath("com.android.tools.build:gradle:$androidPluginVersion")
+        classpath("com.littlekt.gradle:texturepacker:$littleKtVersion")
     }
 }
 
 plugins {
-    kotlin("multiplatform") version "1.9.21"
-    kotlin("plugin.serialization") version "1.9.21"
-    id("com.android.application") version "7.3.1"
-    id("com.lehaine.littlekt.gradle.texturepacker") version "0.8.1"
+    kotlin("multiplatform") version "2.0.0"
+    kotlin("plugin.serialization") version "2.0.0"
+    id("com.littlekt.gradle.texturepacker") version "0.10.0.7be3cb0-SNAPSHOT"
 }
 
-group = "com.lehaine.littlekt.samples"
+group = "com.littlekt.samples"
 version = "1.0"
 
 repositories {
-    google()
     mavenLocal()
+    google()
     mavenCentral()
     maven(url ="https://s01.oss.sonatype.org/content/repositories/snapshots/")
     maven(url = "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven")
@@ -49,33 +46,80 @@ littleKt {
 }
 
 kotlin {
-    android()
+    tasks.withType<JavaExec> { jvmArgs("--enable-preview", "--enable-native-access=ALL-UNNAMED") }
     jvm {
-        compilations.all {
-            kotlinOptions.jvmTarget = "11"
-        }
-        testRuns["test"].executionTask.configure {
-            useJUnit()
-        }
-    }
-    js(KotlinJsCompilerType.IR) {
-        binaries.executable()
-        browser {
-            testTask {
-                useKarma {
-                    useChromeHeadless()
+        compilations.all { kotlinOptions.jvmTarget = "21" }
+        compilations {
+            val main by getting
+
+            val mainClassName = (findProperty("jvm.mainClass") as? String)?.plus("Kt")
+            if (mainClassName == null) {
+                project.logger.log(
+                    LogLevel.ERROR,
+                    "Property 'jvm.mainClass' has either changed or has not been set. Check 'gradle.properties' and ensure it is properly set!"
+                )
+            }
+            tasks {
+                register<Copy>("copyResources") {
+                    group = "package"
+                    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+                    dependsOn(named("jvmProcessResources"))
+                    from(main.output.resourcesDir)
+                    destinationDir = File("${layout.buildDirectory.asFile.get()}/publish")
+                }
+                register<Jar>("packageFatJar") {
+                    group = "package"
+                    archiveClassifier.set("all")
+                    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+                    dependsOn(named("jvmJar"))
+                    dependsOn(named("copyResources"))
+                    manifest { attributes["Main-Class"] = mainClassName }
+                    destinationDirectory.set(File("${layout.buildDirectory.asFile.get()}/publish/"))
+                    from(
+                        main.runtimeDependencyFiles.map { if (it.isDirectory) it else zipTree(it) },
+                        main.output.classesDirs
+                    )
+                    doLast {
+                        logger.lifecycle(
+                            "[LittleKt] The packaged jar is available at: ${outputs.files.first().parent}"
+                        )
+                    }
+                }
+                if (Os.isFamily(Os.FAMILY_MAC)) {
+                    register<JavaExec>("jvmRun") {
+                        jvmArgs("-XstartOnFirstThread")
+                        mainClass.set(mainClassName)
+                        kotlin {
+                            val mainCompile = targets["jvm"].compilations["main"]
+                            dependsOn(mainCompile.compileAllTaskName)
+                            classpath(
+                                { mainCompile.output.allOutputs.files },
+                                (configurations["jvmRuntimeClasspath"])
+                            )
+                        }
+                    }
                 }
             }
         }
-
-        this.attributes.attribute(
-            KotlinPlatformType.attribute,
-            KotlinPlatformType.js
-        )
-
-        compilations.all {
-            kotlinOptions.sourceMap = true
+    }
+    js {
+        binaries.executable()
+        browser {
+            testTask { useKarma { useChromeHeadless() } }
+            commonWebpackConfig {
+                devServer =
+                    (devServer
+                        ?: org.jetbrains.kotlin.gradle.targets.js.webpack.KotlinWebpackConfig
+                            .DevServer())
+                        .copy(
+                            open = mapOf("app" to mapOf("name" to "chrome")),
+                        )
+            }
         }
+
+        this.attributes.attribute(KotlinPlatformType.attribute, KotlinPlatformType.js)
+
+        compilations.all { kotlinOptions.sourceMap = true }
     }
     val kotlinCoroutinesVersion: String by project
     val littleKtVersion: String by project
@@ -83,7 +127,8 @@ kotlin {
     sourceSets {
         val commonMain by getting {
             dependencies {
-                implementation("com.lehaine.littlekt:core:$littleKtVersion")
+                implementation("com.littlekt:core:$littleKtVersion")
+                implementation("com.littlekt:scene-graph:$littleKtVersion")
                 implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion")
             }
         }
@@ -96,38 +141,11 @@ kotlin {
         val jvmTest by getting
         val jsMain by getting {
             dependencies {
-                val kotlinxHtmlVersion = "0.9.1"
+                val kotlinxHtmlVersion = "0.11.0"
                 implementation("org.jetbrains.kotlinx:kotlinx-html-js:$kotlinxHtmlVersion")
             }
 
         }
         val jsTest by getting
-
-        val androidMain by getting {
-            dependencies {
-                implementation("com.lehaine.littlekt:core:$littleKtVersion")
-            }
-        }
     }
-}
-
-android {
-    sourceSets["main"].apply {
-        manifest.srcFile("src/androidMain/AndroidManifest.xml")
-        assets.srcDirs("src/commonMain/resources")
-    }
-    compileSdk = (findProperty("android.compileSdk") as String).toInt()
-
-    defaultConfig {
-        minSdk = (findProperty("android.minSdk") as String).toInt()
-        targetSdk = (findProperty("android.targetSdk") as String).toInt()
-    }
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
-    }
-}
-
-rootProject.extensions.configure<org.jetbrains.kotlin.gradle.targets.js.nodejs.NodeJsRootExtension> {
-    versions.webpackCli.version = "4.10.0"
 }
